# napari

./: pyproject.toml
.github/workflows/: test_translations.yml  test_typing.yml
napari/_vispy/: markers.py  vispy_base_layer.py  vispy_image_layer.py  vispy_points_layer.py  vispy_shapes_layer.py  vispy_surface_layer.py  vispy_vectors_layer.py  volume.py
napari/components/: add_layers_mixin.py
napari/layers/base/: base.py
napari/layers/points/: points.py
napari/layers/vectors/: vectors.py
napari/plugins/: _builtins.py  exceptions.py  hook_specifications.py  io.py
napari/resources/: logo.icns
napari/utils/: io.py
napari/utils/colormaps/: colormaps.py
tools/: validate_strings.py
