[tool.black]
target-version = ['py36', 'py37', 'py38']
skip-string-normalization = true
line-length = 79
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | examples
    | vendored
  )/
  | napari/resources/qt.py
)
'''

[build-system]
requires = ["briefcase", "setuptools", "wheel"]

[tool.briefcase]
project_name = "napari"
bundle = "org.napari"
version = "0.3.0"
url = "https://napari.org/"
license = "BSD license"
author = 'napari development team'
author_email = "jane@example.com"

[tool.briefcase.app.napari]
formal_name = "napari"
description = "napari: a multi-dimensional image viewer"
icon = "src/hellopyside/resources/napari"
sources = ['napari']
requires = [
    'pyside2==5.13.0',
    'dask[array]>=2.1.0',
    'cachey>=0.2.1',  # for dask opportunistic caching
    'fsspec>=0.3.3',
    'imageio>=2.5.0',
    'Pillow!=7.1.0,!=7.1.1',  # not a direct dependency, but 7.1.0 and 7.1.1 broke imageio
    'ipykernel>=5.1.1',
    'numpy>=1.10.0',
    'qtpy>=1.7.0',
    'qtconsole>=4.5.1',
    'scipy>=1.2.0',
    'vispy>=0.6.4',
    'IPython>=7.7.0',
    'backcall>=0.1.0',
    'PyOpenGL>=3.1.0',
    'wrapt>=1.11.1',
    'psutil>=5.0',
    'numpydoc>=0.9.2',
    'napari-plugin-engine>=0.1.5',
    'napari-svg>=0.1.2',
    'tifffile>=2020.2.16',
    'toolz>=0.10.0',
    'importlib-metadata>=1.5.0',
    ]


[tool.briefcase.app.napari.macOS]
requires = []

[tool.briefcase.app.napari.linux]
requires = []

[tool.briefcase.app.napari.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.napari.iOS]
requires = []

[tool.briefcase.app.napari.android]
requires = []
